doc/2.8/_sources/reference/generated/ak.var.rst.txt
ak.var
------

.. py:module: ak.var

Defined in `awkward.operations.ak_var <https://github.com/scikit-hep/awkward/blob/0b5ee6e87d2a6d475c58ee0b3ff2106b415311fd/src/awkward/operations/ak_var.py>`__ on `line 29 <https://github.com/scikit-hep/awkward/blob/0b5ee6e87d2a6d475c58ee0b3ff2106b415311fd/src/awkward/operations/ak_var.py#L29>`__.

.. py:function:: ak.var(x, weight=None, ddof=0, axis=None, *, keepdims=False, mask_identity=False, highlevel=True, behavior=None, attrs=None)


    :param x: The data on which to compute the variance (anything :py:obj:`ak.to_layout` recognizes).
    :param weight: Data that can be broadcasted to ``x`` to give each value a
               weight. Weighting values equally is the same as no weights;
               weighting some values higher increases the significance of those
               values. Weights can be zero or negative.
    :param ddof: "delta degrees of freedom": the divisor used in the
             calculation is ``sum(weights) - ddof``. Use this for "reduced
             variance."
    :type ddof: int
    :param axis: If None, combine all values from the array into
             a single scalar result; if an int, group by that axis: ``0`` is the
             outermost, ``1`` is the first level of nested lists, etc., and
             negative ``axis`` counts from the innermost: ``-1`` is the innermost,
             ``-2`` is the next level up, etc; if a str, it is interpreted as the
             name of the axis which maps to an int if named axes are present.
             Named axes are attached to an array using :py:obj:`ak.with_named_axis` and
             removed with :py:obj:`ak.without_named_axis`; also see the
             `Named axes user guide <../../user-guide/how-to-array-properties-named-axis.html>`__.
    :type axis: None or int or str
    :param keepdims: If False, this function decreases the number of
                 dimensions by 1; if True, the output values are wrapped in a new
                 length-1 dimension so that the result of this operation may be
                 broadcasted with the original array.
    :type keepdims: bool
    :param mask_identity: If True, the application of this function on
                      empty lists results in None (an option type); otherwise, the
                      calculation is followed through with the reducers' identities,
                      usually resulting in floating-point ``nan``.
    :type mask_identity: bool
    :param highlevel: If True, return an :py:obj:`ak.Array`; otherwise, return
                  a low-level :py:obj:`ak.contents.Content` subclass.
    :type highlevel: bool
    :param behavior: Custom :py:obj:`ak.behavior` for the output array, if
                 high-level.
    :type behavior: None or dict
    :param attrs: Custom attributes for the output array, if
              high-level.
    :type attrs: None or dict

Computes the variance in each group of elements from ``x`` (many
types supported, including all Awkward Arrays and Records). The grouping
is performed the same way as for reducers, though this operation is not a
reducer and has no identity. It is the same as NumPy's
`var <https://docs.scipy.org/doc/numpy/reference/generated/numpy.var.html>`__
if all lists at a given dimension have the same length and no None values,
but it generalizes to cases where they do not.

Passing all arguments to the reducers, the variance is calculated as

.. code-block:: python


    ak.sum((x - ak.mean(x))**2 * weight) / ak.sum(weight)

If ``ddof`` is not zero, the above is further corrected by a factor of

.. code-block:: python


    ak.sum(weight) / (ak.sum(weight) - ddof)

Even without ``ddof``, :py:obj:`ak.var` differs from :py:obj:`ak.moment` with ``n=2`` because
the mean is subtracted from all points before summing their squares.

See :py:obj:`ak.sum` for a complete description of handling nested lists and
missing values (None) in reducers, and :py:obj:`ak.mean` for an example with another
non-reducer.

See also :py:obj:`ak.nanvar`.

